update text in home & thankyou

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,11 +16,90 @@
         <div class="row mt-3 mt-md-3">
           <div class="col-12 col-md-12 col-lg-6">
             <div class="sometext-1 mt-0">
-              This Christmas, we are raising money for Hills Community Aid
+              <div *ngIf="this.campaignCenterService.companyId == 1315">
+                This Christmas, we are raising money for The Rotary Club of
+                Springwood
+              </div>
+              <div *ngIf="this.campaignCenterService.companyId == 1321">
+                This Christmas, we  are raising money for Hills Community Aid
+              </div>
+              <div *ngIf="this.campaignCenterService.companyId == 1319">
+                This Christmas, we are raising money for The Better Foundation
+              </div>
+              <div *ngIf="this.campaignCenterService.companyId == 1313">
+                This Christmas, we are raising money for Thrive Services
+              </div>
+              <div *ngIf="this.campaignCenterService.companyId == 1320">
+                This Christmas, we  are raising money for The Rotary Club of Dee
+                Why Warringah
+              </div>
+              <div *ngIf="this.campaignCenterService.companyId == 1316">
+                This Christmas, we are raising money for The Rotary Club of
+                Kincumber
+              </div>
+              <div *ngIf="this.campaignCenterService.companyId == 1312">
+                This Christmas, we are raising money for Camp Breakaway
+              </div>
+              <div *ngIf="this.campaignCenterService.companyId == 1310">
+                This Christmas, we are raising money for The Canopy
+              </div>
+              <div *ngIf="this.campaignCenterService.companyId == 158">
+                This Christmas, we are raising money for The Rotary Club of
+                Warners Bay
+              </div>
+              <div *ngIf="this.campaignCenterService.companyId == 1322">
+                This Christmas, we are raising money for Communities@Work
+              </div>
+              <div *ngIf="this.campaignCenterService.companyId == 1468">
+                This Christmas, we are raising money for The Children’s Hospital
+                Foundation
+              </div>
             </div>
             <div class="sometext-2 mt-3">
-              For every $30 spent in Centre, we will donate $1 to Hills
-              Community Aid on your behalf.*
+              <div *ngIf="this.campaignCenterService.companyId == 1315">
+                For every $30 spent in Centre, we will donate $1 to The Rotary
+                Club of Springwood on your behalf.*
+              </div>
+              <div *ngIf="this.campaignCenterService.companyId == 1321">
+                For every $30 spent in Centre, we will donate $1 to Hills
+                Community Aid on your behalf.*
+              </div>
+              <div *ngIf="this.campaignCenterService.companyId == 1319">
+                For every $30 spent in Centre, we will donate $1 to The Better
+                Foundation on your behalf.*
+              </div>
+              <div *ngIf="this.campaignCenterService.companyId == 1313">
+                For every $30 spent in Centre, we will donate $1 to Thrive
+                Services on your behalf.*
+              </div>
+              <div *ngIf="this.campaignCenterService.companyId == 1320">
+                For every $30 spent in Centre, we will donate $1 to The Rotary
+                Club of Dee Why Warringah on your behalf.*
+              </div>
+              <div *ngIf="this.campaignCenterService.companyId == 1316">
+                For every $30 spent in Centre, we will donate $1 to The Rotary
+                Club of Kincumber on your behalf.*
+              </div>
+              <div *ngIf="this.campaignCenterService.companyId == 1312">
+                For every $30 spent in Centre, we will donate $1 to Camp
+                Breakaway on your behalf.*
+              </div>
+              <div *ngIf="this.campaignCenterService.companyId == 1310">
+                For every $30 spent in Centre, we will donate $1 to The Canopy
+                on your behalf.*
+              </div>
+              <div *ngIf="this.campaignCenterService.companyId == 158">
+                For every $30 spent in Centre, we will donate $1 to The Rotary
+                Club of Warners Bay on your behalf.*
+              </div>
+              <div *ngIf="this.campaignCenterService.companyId == 1322">
+                For every $30 spent in Centre, we will donate $1 to
+                Communities@Workon your behalf.*
+              </div>
+              <div *ngIf="this.campaignCenterService.companyId == 1468">
+                For every $30 spent in Centre, we will donate $1 to The
+                Children’s Hospital Foundation on your behalf.*
+              </div>
             </div>
           </div>
           <div class="col-12 col-md-12 col-lg-6 mt-4 mt-md-3 mt-lg-0">
