--- a/src/app/thankyou/simple/thankyou-simple.component.html
+++ b/src/app/thankyou/simple/thankyou-simple.component.html
@@ -34,17 +34,107 @@
             <div class="row mt-4">
               <div class="col-12">
                 <div class="thankyou-text-2 text-center text-md-left">
-                  Thank you for entering our weekly draw to win a $250 Centre
-                  Gift Card, your support to Hills Community Aid is greatly
-                  appreciated.*
+                  <div *ngIf="this.campaignCenterService.companyId == 1315">
+                    Thank you for entering our weekly draw to win a $100 Centre
+                    Gift Card, your donation to The Rotary Club of Springwood is
+                    greatly appreciated.*
+                  </div>
+                  <div *ngIf="this.campaignCenterService.companyId == 1321">
+                    Thank you for entering our weekly draw to win a $250 Centre
+                    Gift Card, your support to Hills Community Aid is greatly
+                    appreciated.*
+                  </div>
+                  <div *ngIf="this.campaignCenterService.companyId == 1319">
+                    Thank you for entering our weekly draw to win a $250 Centre
+                    Gift Card, your donation to The Better Foundation is greatly
+                    appreciated.*
+                  </div>
+                  <div *ngIf="this.campaignCenterService.companyId == 1313">
+                    Your donation to Thrive Services is greatly appreciated.*
+                  </div>
+                  <div *ngIf="this.campaignCenterService.companyId == 1320">
+                    Thank you for entering our weekly draw to win a $250 Centre
+                    Gift Card, your donation to The Rotary Club of Dee Why
+                    Warringah is greatly appreciated.*
+                  </div>
+                  <div *ngIf="this.campaignCenterService.companyId == 1316">
+                    Thank you for entering our weekly draw to win a $250 Centre
+                    Gift Card, your donation to The Rotary Club of Kincumber is
+                    greatly appreciated.*
+                  </div>
+                  <div *ngIf="this.campaignCenterService.companyId == 1312">
+                    Your donation to Camp Breakaway is greatly appreciated.*
+                  </div>
+                  <div *ngIf="this.campaignCenterService.companyId == 1310">
+                    Thank you for entering our weekly draw to win a $100 Centre
+                    Gift Card, your donation to The Canopy is greatly
+                    appreciated.*
+                  </div>
+                  <div *ngIf="this.campaignCenterService.companyId == 158">
+                    Thank you for entering our weekly draw to win a $100 Centre
+                    Gift Card, your donation to The Rotary Club of Warners Bay
+                    is greatly appreciated.*
+                  </div>
+                  <div *ngIf="this.campaignCenterService.companyId == 1322">
+                    Thank you for entering our weekly draw to win a $250 Centre
+                    Gift Card, your donation to Communities@Work is greatly
+                    appreciated.*
+                  </div>
+                  <div *ngIf="this.campaignCenterService.companyId == 1468">
+                    Thank you for entering our weekly draw to win a $100 Centre
+                    Gift Card, your donation to The Children’s Hospital
+                    Foundation is greatly appreciated.*
+                  </div>
                 </div>
               </div>
             </div>
             <div class="row mt-4">
               <div class="col-12">
                 <div class="thankyou-text-3 text-center text-md-left">
-                  Plus, you have been entered into the major draw for a chance
-                  to win a $1,000 EFTPOS Gift Card.*
+                  <div *ngIf="this.campaignCenterService.companyId == 1315">
+                    Plus, you have been entered into the major draw for a chance
+                    to win a $1,000 EFTPOS Gift Card.*
+                  </div>
+                  <div *ngIf="this.campaignCenterService.companyId == 1321">
+                    Plus, you have been entered into the major draw for a chance
+                    to win a $1,000 EFTPOS Gift Card.*
+                  </div>
+                  <div *ngIf="this.campaignCenterService.companyId == 1319">
+                    Plus, you have been entered into the major draw for a chance
+                    to win a $1,000 EFTPOS Gift Card.*
+                  </div>
+                  <div *ngIf="this.campaignCenterService.companyId == 1313">
+                    You have been entered into the major draw for a chance to
+                    win a $1,000 EFTPOS Gift Card.*
+                  </div>
+                  <div *ngIf="this.campaignCenterService.companyId == 1320">
+                    Plus, you have been entered into the major draw for a chance
+                    to win a $1,000 EFTPOS Gift Card.*
+                  </div>
+                  <div *ngIf="this.campaignCenterService.companyId == 1316">
+                    Plus, you have been entered into the major draw for a chance
+                    to win a $1,000 EFTPOS Gift Card.*
+                  </div>
+                  <div *ngIf="this.campaignCenterService.companyId == 1312">
+                    You have been entered into the major draw for a chance to
+                    win a $500 EFTPOS Gift Card.*
+                  </div>
+                  <div *ngIf="this.campaignCenterService.companyId == 1310">
+                    Plus, you have been entered into the major draw for a chance
+                    to win a $1,000 EFTPOS Gift Card.*
+                  </div>
+                  <div *ngIf="this.campaignCenterService.companyId == 158">
+                    Plus, you have been entered into the major draw for a chance
+                    to win a $1,000 EFTPOS Gift Card.*
+                  </div>
+                  <div *ngIf="this.campaignCenterService.companyId == 1322">
+                    Plus, you have been entered into the major draw for a chance
+                    to win a $1,000 EFTPOS Gift Card.*
+                  </div>
+                  <div *ngIf="this.campaignCenterService.companyId == 1468">
+                    Plus, you have been entered into the major draw for a chance
+                    to win a $1,000 EFTPOS Gift Card.*
+                  </div>
                 </div>
               </div>
             </div>
