--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -15,67 +15,67 @@
     <div class="row text-center p-2 pNO-md-3 d-flex align-items-center">
       <div class="col-8 col-md-6">
         <img
-          *ngIf="companyId == 1315"
+          *ngIf="this.campaignCenterService.companyId == 1315"
           src="./assets/img/winmalee-logo.png"
           class="imgNO-fluid footer-logo-1"
           height="50"
         />
         <img
-          *ngIf="companyId == 1321"
+          *ngIf="this.campaignCenterService.companyId == 1321"
           src="./assets/img/kellyville-footer.png"
           class="imgNO-fluid footer-logo-1"
           height="50"
         />
         <img
-          *ngIf="companyId == 1319"
+          *ngIf="this.campaignCenterService.companyId == 1319"
           src="./assets/img/theponds-logo.png"
           class="imgNO-fluid footer-logo-1"
           height="50"
         />
         <img
-          *ngIf="companyId == 1313"
+          *ngIf="this.campaignCenterService.companyId == 1313"
           src="./assets/img/katoomba-logo.png"
           class="imgNO-fluid footer-logo-1"
           height="50"
         />
         <img
-          *ngIf="companyId == 1320"
+          *ngIf="this.campaignCenterService.companyId == 1320"
           src="./assets/img/deewhygrand-logo.png"
           class="imgNO-fluid footer-logo-1"
           height="50"
         />
         <img
-          *ngIf="companyId == 1316"
+          *ngIf="this.campaignCenterService.companyId == 1316"
           src="./assets/img/kincumber-logo.png"
           class="imgNO-fluid footer-logo-1"
           height="50"
         />
         <img
-          *ngIf="companyId == 1312"
+          *ngIf="this.campaignCenterService.companyId == 1312"
           src="./assets/img/northlakes-logo.png"
           class="imgNO-fluid footer-logo-1"
           height="50"
         />
         <img
-          *ngIf="companyId == 1310"
+          *ngIf="this.campaignCenterService.companyId == 1310"
           src="./assets/img/fletcher-logo.png"
           class="imgNO-fluid footer-logo-1"
           height="50"
         />
         <img
-          *ngIf="companyId == 158"
+          *ngIf="this.campaignCenterService.companyId == 158"
           src="./assets/img/warnersbay-logo.png"
           class="imgNO-fluid footer-logo-1"
           height="50"
         />
         <img
-          *ngIf="companyId == 1322"
+          *ngIf="this.campaignCenterService.companyId == 1322"
           src="./assets/img/gungahlin-logo.png"
           class="imgNO-fluid footer-logo-1"
           height="50"
         />
         <img
-          *ngIf="companyId == 1468"
+          *ngIf="this.campaignCenterService.companyId == 1468"
           src="./assets/img/avenue-logo.png"
           class="imgNO-fluid footer-logo-1"
           height="50"
