--- a/src/app/winner/simple/winner-simple.component.html
+++ b/src/app/winner/simple/winner-simple.component.html
@@ -19,7 +19,7 @@
           <div class="col-12 col-md-6">
             <div class="winner-head text-center text-md-left">
               <img
-                src="../../assets/img/gift-win.png"
+                src="../../assets/img/cookies/boxloop.gif"
                 alt=""
                 class="img-fluid"
               />
