--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -541,9 +541,9 @@
                       >
                         Terms & Conditions
                       </a>
-                      of entry. I agree to subscribe to the Kellyville Village
-                      database and receive our latest news and updates. You may
-                      unsubscribe at any time.
+                      of entry. I agree to subscribe to the
+                      {{ centreName }} database and receive our latest news and
+                      updates. You may unsubscribe at any time.
                       <a
                         *ngIf="companyId == 1315"
                         href="https://winmaleevillage.com.au/privacy-policy/"
