fix text & images

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -103,14 +103,70 @@
             </div>
           </div>
           <div class="col-12 col-md-12 col-lg-6 mt-4 mt-md-3 mt-lg-0">
-            <img
+            <!-- <img
               *ngIf="this.campaignCenterService.companyId == 1312"
               src="../../assets/img/upto-northlakes-web.png"
               class="img-fluid"
-            />
-            <img
+            /> -->
+            <!-- <img
               *ngIf="this.campaignCenterService.companyId != 1312"
               src="../../assets/img/img-upto-web.png"
+              class="img-fluid"
+            /> -->
+
+            <img
+              *ngIf="this.campaignCenterService.companyId == 1315"
+              src="./../assets/img/img-upto-winmalee-web.png"
+              class="img-fluid"
+            />
+            <img
+              *ngIf="this.campaignCenterService.companyId == 1321"
+              src="./../assets/img/img-upto-kellyville-web.png"
+              class="img-fluid"
+            />
+            <img
+              *ngIf="this.campaignCenterService.companyId == 1319"
+              src="./../assets/img/img-upto-theponds-web.png"
+              class="img-fluid"
+            />
+            <img
+              *ngIf="this.campaignCenterService.companyId == 1313"
+              src="./../assets/img/img-upto-katoomba-web.png"
+              class="img-fluid"
+            />
+            <img
+              *ngIf="this.campaignCenterService.companyId == 1320"
+              src="./../assets/img/img-upto-deewhygrand-web.png"
+              class="img-fluid"
+            />
+            <img
+              *ngIf="this.campaignCenterService.companyId == 1316"
+              src="./../assets/img/img-upto-kincumber-web.png"
+              class="img-fluid"
+            />
+            <img
+              *ngIf="this.campaignCenterService.companyId == 1312"
+              src="./../assets/img/img-upto-northlakes-web.png"
+              class="img-fluid"
+            />
+            <img
+              *ngIf="this.campaignCenterService.companyId == 1310"
+              src="./../assets/img/img-upto-fletcher-web.png"
+              class="img-fluid"
+            />
+            <img
+              *ngIf="this.campaignCenterService.companyId == 158"
+              src="./../assets/img/img-upto-warnersbay-web.png"
+              class="img-fluid"
+            />
+            <img
+              *ngIf="this.campaignCenterService.companyId == 1322"
+              src="./../assets/img/img-upto-gungahlin-web.png"
+              class="img-fluid"
+            />
+            <img
+              *ngIf="this.campaignCenterService.companyId == 1468"
+              src="./../assets/img/img-upto-avenue-web.png"
               class="img-fluid"
             />
           </div>
@@ -138,7 +194,7 @@
                           <div class="row mt-2 mb-3">
                             <div class="col-12">
                               <div class="desc">
-                                Enter your email address here to get started
+                                Enter your email address here to get started.
                               </div>
                             </div>
                           </div>
