--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -542,80 +542,80 @@
                         Terms & Conditions
                       </a>
                       of entry. I agree to subscribe to the
-                      {{ centreName }} database and receive our latest news and
+                      {{ campaignCenterService.centreName }} database and receive our latest news and
                       updates. You may unsubscribe at any time.
                       <a
-                        *ngIf="companyId == 1315"
+                        *ngIf="campaignCenterService.companyId == 1315"
                         href="https://winmaleevillage.com.au/privacy-policy/"
                         target="_blank"
                         class="footer-tnc-link"
                         >Click here</a
                       >
                       <a
-                        *ngIf="companyId == 1321"
+                        *ngIf="campaignCenterService.companyId == 1321"
                         href="https://kellyvillevillage.com.au/privacy-policy/"
                         target="_blank"
                         class="footer-tnc-link"
                         >Click here</a
                       >
                       <a
-                        *ngIf="companyId == 1319"
+                        *ngIf="campaignCenterService.companyId == 1319"
                         href="https://shopattheponds.com.au/privacy-policy/"
                         target="_blank"
                         class="footer-tnc-link"
                         >Click here</a
                       >
                       <a
-                        *ngIf="companyId == 1313"
+                        *ngIf="campaignCenterService.companyId == 1313"
                         href="https://katoombavillage.com.au/privacy-policy/"
                         target="_blank"
                         class="footer-tnc-link"
                         >Click here</a
                       >
                       <a
-                        *ngIf="companyId == 1320"
+                        *ngIf="campaignCenterService.companyId == 1320"
                         href="https://deewhygrand.com/privacy-policy/"
                         target="_blank"
                         class="footer-tnc-link"
                         >Click here</a
                       >
                       <a
-                        *ngIf="companyId == 1316"
+                        *ngIf="campaignCenterService.companyId == 1316"
                         href="https://kincumbershoppingvillage.com.au/privacy-policy/"
                         target="_blank"
                         class="footer-tnc-link"
                         >Click here</a
                       >
                       <a
-                        *ngIf="companyId == 1312"
+                        *ngIf="campaignCenterService.companyId == 1312"
                         href="https://northlakesshoppingcentre.com.au/privacy-policy/"
                         target="_blank"
                         class="footer-tnc-link"
                         >Click here</a
                       >
                       <a
-                        *ngIf="companyId == 1310"
+                        *ngIf="campaignCenterService.companyId == 1310"
                         href="https://fletchervillage.com.au/privacy-policy/"
                         target="_blank"
                         class="footer-tnc-link"
                         >Click here</a
                       >
                       <a
-                        *ngIf="companyId == 158"
+                        *ngIf="campaignCenterService.companyId == 158"
                         href="https://warnersbayvillage.com/privacy-policy/"
                         target="_blank"
                         class="footer-tnc-link"
                         >Click here</a
                       >
                       <a
-                        *ngIf="companyId == 1322"
+                        *ngIf="campaignCenterService.companyId == 1322"
                         href="https://gungahlinvillage.com.au/privacy-policy/"
                         target="_blank"
                         class="footer-tnc-link"
                         >Click here</a
                       >
                       <a
-                        *ngIf="companyId == 1468"
+                        *ngIf="campaignCenterService.companyId == 1468"
                         href="https://19thavenueshopping.com.au/privacy-policy/"
                         target="_blank"
                         class="footer-tnc-link"
