--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -17,81 +17,66 @@
         <img
           *ngIf="this.campaignCenterService.companyId == 1315"
           src="./assets/img/winmalee-logo.png"
-          class="imgNO-fluid footer-logo-1"
-          height="50"
+          class="img-fluid footer-logo-1"
         />
         <img
           *ngIf="this.campaignCenterService.companyId == 1321"
           src="./assets/img/kellyville-footer.png"
-          class="imgNO-fluid footer-logo-1"
-          height="50"
+          class="img-fluid footer-logo-1"
         />
         <img
           *ngIf="this.campaignCenterService.companyId == 1319"
           src="./assets/img/theponds-logo.png"
-          class="imgNO-fluid footer-logo-1"
-          height="50"
+          class="img-fluid footer-logo-1"
         />
         <img
           *ngIf="this.campaignCenterService.companyId == 1313"
           src="./assets/img/katoomba-logo.png"
-          class="imgNO-fluid footer-logo-1"
-          height="50"
+          class="img-fluid footer-logo-1"
         />
         <img
           *ngIf="this.campaignCenterService.companyId == 1320"
           src="./assets/img/deewhygrand-logo.png"
-          class="imgNO-fluid footer-logo-1"
-          height="50"
+          class="img-fluid footer-logo-1"
         />
         <img
           *ngIf="this.campaignCenterService.companyId == 1316"
           src="./assets/img/kincumber-logo.png"
-          class="imgNO-fluid footer-logo-1"
-          height="50"
+          class="img-fluid footer-logo-1"
         />
         <img
           *ngIf="this.campaignCenterService.companyId == 1312"
           src="./assets/img/northlakes-logo.png"
-          class="imgNO-fluid footer-logo-1"
-          height="50"
+          class="img-fluid footer-logo-1"
         />
         <img
           *ngIf="this.campaignCenterService.companyId == 1310"
           src="./assets/img/fletcher-logo.png"
-          class="imgNO-fluid footer-logo-1"
-          height="50"
+          class="img-fluid footer-logo-1"
         />
         <img
           *ngIf="this.campaignCenterService.companyId == 158"
           src="./assets/img/warnersbay-logo.png"
-          class="imgNO-fluid footer-logo-1"
-          height="50"
+          class="img-fluid footer-logo-1"
         />
         <img
           *ngIf="this.campaignCenterService.companyId == 1322"
           src="./assets/img/gungahlin-logo.png"
-          class="imgNO-fluid footer-logo-1"
-          height="50"
+          class="img-fluid footer-logo-1"
         />
         <img
           *ngIf="this.campaignCenterService.companyId == 1468"
           src="./assets/img/avenue-logo.png"
-          class="imgNO-fluid footer-logo-1"
-          height="50"
+          class="img-fluid footer-logo-1"
         />
       </div>
-      <div class="col-4 col-md-6">
+      <div class="col-4 col-md-6 text-right">
         <!-- Entries close 11:59pm Friday 24th December.
       <a (click)="openModal(terms)" class="footer-tnc-link"
         >*Terms & Conditions</a
       >
       apply. -->
-        <img
-          src="./assets/img/ispt-logo.png"
-          class="imgNO-fluid footer-logo-2"
-          height="50"
-        />
+        <img src="./assets/img/ispt-logo.png" class="img-fluid footer-logo-2" />
       </div>
     </div>
   </div>
